            Thingy52: Allow multiple sounds to play at once
            nRF5x: Ensure Waveform triggers a finished event
            Thingy52: Enable simple bootloader, add travis build for DFU
            Add Serial.inject to allow data to be added as if it was received from that device
            Fix UDP handling so that it copes with packets not all being received in one go

     1v96 : ESP8266: no callback if SSID is not available (fix #1297)
            ESP8266: esp8266 wifi getStatus doesn't show savedMode (fix #752)
            ESP8266: cleanup defines WIFI_DBG and NET_DBG for RELEASE
            ESP8266: switch to single ld file eagle.app.v6.new.2048.ld for ESP8266_4MB board
            Allow JS modules to be built-in by adding files to JSMODULESOURCES
            Fix slow/hacky handling of 7 bit serial data for STM32
            Add more stack checks so invalid code `typeof typeof typeof x100` can't break stack (fix #1310)
            nRF5x: Fix PWM output via Waveform class
            Fix free stack checking on ARM
            nRF52: Make slightly more space available for stack
            nRF5x: Move to SDK 12.3
            Stop stack traces from being gathered in functions for Ctrl-C (fix #1313)
            nRF5x: Fix crash if I2C is used before being initialised (fix #1301)
            Internal printf can now pad with spaces
            Add `E.dumpFreeList` in non-release builds to help with debugging
            Fix mild memory leak in jsvMakeIntoVariableName that caused GC to run more often than normal
            E.toString now tries harder to allocate a Flat String, and works with no-alloc for Uint8Array/FlatStrings
            WIO_LTE fix SD card initialisation
            Improve SD card reliability on all boards by trying to initialise multiple times before failing
            Remove forced inlining in variable inspection functions (reduces flash usage by ~10k)
            Remove un-needed DNS lookup for localhost