@@ -89,12 +89,6 @@ if board.chip["family"]=="STM32F4" and RAM_SIZE > 128*1024:
 if board.chip["part"].startswith("STM32L476") and RAM_SIZE > 96*1024:
   RAM_SIZE = 96*1024
 
-# on L496, the RAM is divided in 2 parts :
-#   256k at 0x20000000
-#   64k at 0x10000000
-if board.chip["part"].startswith("STM32L496") and RAM_SIZE > 256*1024:
-  RAM_SIZE = 256*1024
-
 # IS_BOOTLOADER will only get used on official Espruino
 # boards. The ST discovery bootloader rejects firmwares that
 # aren't based at 0x08000000, however it seems to be wrong. If you use
