@@ -7,6 +7,7 @@
             Thingy52: Enable simple bootloader, add travis build for DFU
             Add Serial.inject to allow data to be added as if it was received from that device
             Fix UDP handling so that it copes with packets not all being received in one go
+            STM32L496: increase variables - use full 320kB of RAM as it is contiguous
 
      1v96 : ESP8266: no callback if SSID is not available (fix #1297)
             ESP8266: esp8266 wifi getStatus doesn't show savedMode (fix #752)
